# mobility-feature-pipeline

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: pipeline.excalidraw
src/mobility_feature_pipeline/: baseline.py  cli.py  config.py  diagnose.py  evaluate.py  model_config.py  pipeline.py  serve.py  server.py  train.py  triage.py  validate.py
src/mobility_feature_pipeline/sql/: active_stations.sql  build_dataset.sql  forward_label.sql  lags.sql  obs_grid.sql  rolling.sql  score_features.sql  snapshot.sql  temporal.sql
tests/: conftest.py  test_diagnose.py  test_evaluate.py  test_features.py  test_label.py  test_pipeline.py  test_serve.py  test_server.py  test_train.py  test_triage.py
